--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,14 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "short_name": "Spelling Bee Helper",
+  "name": "Spelling Bee Helper",
+  "description": "A helper for NYT Spelling Bee game which keeps a count of the words you've found.",
+  "homepage_url": "https://www.nytimes.com/puzzles/spelling-bee",
+  "version": "1.0.0",
+  "manifest_version": 3,
+  "icons": {
+    "16": "spelling_bee_icon_16.png",
+    "32": "spelling_bee_icon_32.png",
+    "48": "spelling_bee_icon_48.png",
+    "128": "spelling_bee_icon_128.png"
+  }
 }
