Add main content page
Added a new content script that for now just adds a new section to
the Spelling Bee game, adding a title.

Added Craco to generate a single content.js file which can be added
to the plugin's manifest.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,5 +10,16 @@
     "32": "spelling_bee_icon_32.png",
     "48": "spelling_bee_icon_48.png",
     "128": "spelling_bee_icon_128.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "run_at": "document_end",
+      "matches": [
+        "https://*.nytimes.com/*"
+      ],
+      "js": [
+        "./static/js/content.js"
+      ]
+    }
+  ]
 }
