Add Spelling Bee Grid
Added the Spelling Bee Grid to the main page, and show a live count
when the button is clicked

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,6 +19,9 @@
       ],
       "js": [
         "./static/js/content.js"
+      ],
+      "css": [
+        "./css/style.css"
       ]
     }
   ]
