Add settings screen
Added a new setting screen. I have added toggles for each setting,
but not implemented them as part of this changeset.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,9 +22,20 @@
         "./static/js/content.js"
       ],
       "css": [
-        "./css/style.css"
+        "./css/style.css",
+        "./css/toggle.css"
       ]
     }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": [ "img/settings_cog.svg", "img/back_arrow.svg" ],
+      "matches": [ 
+        "https://www.nytimes.com/puzzles/spelling-bee",
+        "https://nytimes.com/puzzles/spelling-bee"
+       ]
+    }
+    
   ],
   "browser_specific_settings": {
     "gecko": {
