--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,10 +6,10 @@
   "version": "1.0.1",
   "manifest_version": 3,
   "icons": {
-    "16": "spelling_bee_icon_16.png",
-    "32": "spelling_bee_icon_32.png",
-    "48": "spelling_bee_icon_48.png",
-    "128": "spelling_bee_icon_128.png"
+    "16": "img/spelling_bee_icon_16.png",
+    "32": "img/spelling_bee_icon_32.png",
+    "48": "img/spelling_bee_icon_48.png",
+    "128": "img/spelling_bee_icon_128.png"
   },
   "content_scripts": [
     {
