Add auto start feature
Added the ability to skip the welcome screen and the congratulations
screen so you can get right to playing with minimal clicks

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,7 +23,8 @@
       ],
       "css": [
         "./css/style.css",
-        "./css/toggle.css"
+        "./css/toggle.css",
+        "./css/checkbox.css"
       ]
     }
   ],
